--- a/Dashboard/conf/collector.properties
+++ b/Dashboard/conf/collector.properties
@@ -30,7 +30,7 @@ resource.config.filename=../conf/resource_monitoring.conf
 language=en
 
 # Connection mode (client or server)
-connection.mode=client
+connection.mode=server
 
 #########################################
 # Settings for server mode
@@ -71,8 +71,8 @@ javelin.log.storage.period.1=7d
 # Measurement Data Storage Period
 measurement.log.storage.period.1=7d
 
-# Accept Host for WebDashboard
-# Only to use WebDashboard
+# Accept Host for WebExplorer
+# Only to use WebExplorer
 datacollector.accepthost.1=localhost
 
 #########################################
